<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name" translatable="false">ScytheHelper</string>
    <string name="app_version">App version %1$s</string>

    <string name="final_score_continue">New game</string>
    <string name="final_score_label">These are the final scores</string>

    <string name="fragment_title_final_score">Final score</string>
    <string name="fragment_title_player_setup">Players setup</string>
    <string name="fragment_title_popularity">Popularity</string>
    <string name="fragment_title_scoring">Scoring</string>

    <string-array name="player_colors">
        <item>Player color</item>
        <item>Blue - Nordic</item>
        <item>Black - Saxony</item>
        <item>White - Polania</item>
        <item>Yellow - Crimea</item>
        <item>Red - Rusviet</item>
    </string-array>
    <string name="player_name">Player %1$d name</string>

    <string name="players_continue">Continue &gt;&gt; Popularity</string>
    <string name="players_do_setup">Setup</string>
    <string-array name="players_number">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="players_number">Number of players</string>

    <string name="popularity_continue">Continue &gt;&gt; Scoring</string>
    <string name="popularity_label">Enter each player\'s end game popularity</string>

    <string name="scoring_coins">Coins</string>
    <string name="scoring_continue">Calculate final score</string>
    <string name="scoring_label">Enter each player\'s scores</string>
    <string name="scoring_resources">Resources</string>
    <string name="scoring_stars">Stars</string>
    <string name="scoring_structures">Structures</string>
    <string name="scoring_territories">Territories bonus</string>

    <string name="start">Start</string>
    <string name="start_text">This is the first version of an app to help scoring Scythe. Still to do: make it save in a db for history, add some graphics, add validations…</string>
</resources>
